gcc_os/gcc/testsuite/gcc.dg/multi/imi-5b.c
/* { dg-do dummy } */
extern double bar(int, int); /* { dg-error "conflicting types" } */

int main(void)
{
  bar(1, 2);
}

